# shhelp

./: .coverage  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml
docs/: llms.txt
docs/todo/: 0001_skip_tools.md  0002_findall.md
shgod/: cli.py  config.py  llms.py  prompt.j2  templating.py  test_e2e.py  test_lex.py  test_templating.py  test_tooling.py  tmux.py  tooling.py  ui.py  unix.py
shhelp/: cli.py  config.py  llms.py  prompt.j2  templating.py  test_e2e.py  test_lex.py  tmux.py  ui.py  unix.py
todo/: 0001_skip_tools.md
