[project]
name = "shgod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.20.2",
    "litellm>=1.70.0",
    "tyro>=0.9.20",
]

[project.scripts]
shgod = "shgod.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.131.18",
    "pytest>=8.3.5",
    "pytest-console-scripts>=1.4.1",
    "pytest-cov>=6.1.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.10",
]

[tool.pytest.ini_options]
timeout = 10 # seconds per test
