[project]
name = "shhelp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.20.2",
    "jinja2>=3.1.6",
    "litellm>=1.70.0",
    "prompt-toolkit>=3.0.51",
    "tyro>=0.9.20",
]


[project.urls]
Homepage = "https://github.com/samuelstevens/shhelp"
Issues = "https://github.com/samuelstevens/shhelp/issues"

[project.scripts]
shh = "shhelp.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.131.18",
    "jsonschema>=4.23.0",
    "pytest>=8.3.5",
    "pytest-console-scripts>=1.4.1",
    "pytest-cov>=6.1.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.10",
]

[tool.pytest.ini_options]
timeout = 10 # seconds per test

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F722", "E402", "E501"]
